# internal/httpapi/handlers.go
@@ -48,6 +48,8 @@ func (h *Handler) Routes(mux *http.ServeMux) {
 	mux.HandleFunc("GET /oid4vci/v1/credential-offer/{id}", h.credentialOffer)
 	mux.HandleFunc("POST /oid4vci/v1/par", h.par)
 	mux.HandleFunc("GET /oid4vci/v1/authorize", h.authorize)
+	mux.HandleFunc("GET /oid4vci/v1/identify/claims", h.identifyClaims)
+	mux.HandleFunc("POST /oid4vci/v1/identify/complete", h.identifyComplete)
 	mux.HandleFunc("POST /oid4vci/v1/token", h.token)
 	mux.HandleFunc("POST /oid4vci/v1/nonce", h.nonce)
 	mux.HandleFunc("POST /oid4vci/v1/credential", h.credential)
